Added GC and Steel Support

--- a/src/main/resources/assets/morethanapickaxe/lang/en_us.lang
+++ b/src/main/resources/assets/morethanapickaxe/lang/en_us.lang
@@ -7,3 +7,7 @@ item.gold_adze.name=Gold Adze
 item.diamond_adze.name=Diamond Adze
 item.bronze_adze.name=Bronze Adze
 item.titanium_adze.name=Titanium Adze
+
+item.steel_adze.name=Steel Adze
+item.desh_adze.name=Desh Adze
+item.titanium_adze_gc.name=Titanium Adze
