--- a/src/main/resources/assets/morethanapickaxe/lang/es_es.json
+++ b/src/main/resources/assets/morethanapickaxe/lang/es_es.json
@@ -11,7 +11,7 @@
   "item.morethanapickaxe.desh_adze": "Adze de Desh",
   "item.morethanapickaxe.titanium_adze_gc": "Adze de Titanio",
   
-  "advancements.morethanapickaxe.install": "More Than A Pickaxe Instalación",
+  "advancements.morethanapickaxe.install": "More Than A Pickaxe Instalaci\u00f3n",
   "advancements.morethanapickaxe.install.desc": "Descargue e Instale More Than A Pickaxe",
   "advancements.morethanapickaxe.install.display1": "¡coolsim te agradece por descargar More Than A Pickaxe!",
   "advancements.morethanapickaxe.adze": "Universal",
