--- a/src/main/resources/assets/morethanapickaxe/lang/en_us.lang
+++ b/src/main/resources/assets/morethanapickaxe/lang/en_us.lang
@@ -1,3 +1,5 @@
+morethanapickaxe.name=More Than A Pickaxe
+
 item.wooden_adze.name=Wooden Adze
 item.stone_adze.name=Stone Adze
 item.iron_adze.name=Iron Adze
@@ -9,6 +11,14 @@ item.titanium_adze.name=Titanium Adze
 item.steel_adze.name=Steel Adze
 item.desh_adze.name=Desh Adze
 item.titanium_adze_gc.name=Titanium Adze
+
+item.hammertime.itemdenseadzewood.name=Wooden Dense Adze
+item.hammertime.itemdenseadzestone.name=Stone Dense Adze
+item.hammertime.itemdenseadzeiron.name=Iron Dense Adze
+item.hammertime.itemdenseadzegold.name=Gold Dense Adze
+item.hammertime.itemdenseadzediamond.name=Diamond Dense Adze
+item.hammertime.itemdenseadzebronze.name=Bronze Dense Adze
+item.hammertime.itemdenseadzetitanium.name=Titanium Dense Adze
 
 advancements.morethanapickaxe.install=More Than A Pickaxe Installation
 advancements.morethanapickaxe.install.desc=Download and Install More Than A Pickaxe
