Added Netherite Adze Lang

--- a/src/main/resources/assets/morethanapickaxe/lang/es_es.lang
+++ b/src/main/resources/assets/morethanapickaxe/lang/es_es.lang
@@ -15,6 +15,7 @@ item.titanium_adze_gc.name=Adze de Titanio
 
 item.emerald_adze.name=Adze de Esmeralda
 item.obsidian_adze.name=Adze de Obsidiana
+item.netherite_adze.name=Adze de Netherita
 
 item.vulcanite_adze.name=Adze de Vulcanita
 item.carbonado_adze.name=Adze de Carbonado
