--- a/src/main/resources/assets/morethanapickaxe/lang/ja_jp.lang
+++ b/src/main/resources/assets/morethanapickaxe/lang/ja_jp.lang
@@ -15,6 +15,7 @@ item.titanium_adze_gc.name=チタンのアズ
 
 item.emerald_adze.name=エメラルドのアズ
 item.obsidian_adze.name=黒曜石のアズ
+item.netherite_adze.name=ネザライトのアズ
 
 item.vulcanite_adze.name=バルカナイトのアズ
 item.carbonado_adze.name=カルボナードのアズ
