--- a/src/main/resources/assets/morethanapickaxe/lang/ru_ru.lang
+++ b/src/main/resources/assets/morethanapickaxe/lang/ru_ru.lang
@@ -15,6 +15,7 @@ item.titanium_adze_gc.name=Титановый Адзе
 
 item.emerald_adze.name=Изумруд Адзе
 item.obsidian_adze.name=Обсидиан Адзе
+item.netherite_adze.name=Незеритовый Адзе
 
 item.vulcanite_adze.name=Вулканит Адзе
 item.carbonado_adze.name=Карбонадо Адзе
