--- a/src/main/resources/assets/morethanapickaxe/lang/zh_cn.lang
+++ b/src/main/resources/assets/morethanapickaxe/lang/zh_cn.lang
@@ -15,6 +15,7 @@ item.titanium_adze_gc.name=钛阿泽
 
 item.emerald_adze.name=绿宝石阿泽
 item.obsidian_adze.name=黑曜石阿泽
+item.netherite_adze.name=下界合金阿泽
 
 item.vulcanite_adze.name=ul石阿泽
 item.carbonado_adze.name=卡波纳多阿泽
