--- a/src/main/resources/assets/morethanapickaxe/lang/zh_tw.lang
+++ b/src/main/resources/assets/morethanapickaxe/lang/zh_tw.lang
@@ -15,6 +15,7 @@ item.titanium_adze_gc.name=钛阿澤
 
 item.emerald_adze.name=綠寶石阿澤
 item.obsidian_adze.name=黑曜石阿澤
+item.netherite_adze.name=下界合金阿澤
 
 item.vulcanite_adze.name=ul石阿澤
 item.carbonado_adze.name=卡波納多阿澤
