--- a/src/main/resources/assets/morethanapickaxe/lang/ru_ru.json
+++ b/src/main/resources/assets/morethanapickaxe/lang/ru_ru.json
@@ -11,7 +11,21 @@
   
   "item.morethanapickaxe.steel_adze": "\u0421\u0442\u0430\u043b\u044c\u043d\u043e\u0439 \u0410\u0434\u0437\u0435",
   "item.morethanapickaxe.desh_adze": "\u0414\u0435\u0448 \u0410\u0434\u0437\u0435",
+  "item.morethanapickaxe.sticky_desh_adze": "\u041b\u0438\u043f\u043a\u0430\u044f \u0414\u0435\u0448 \u0410\u0434\u0437\u0435",
   "item.morethanapickaxe.titanium_adze_gc": "\u0422\u0438\u0442\u0430\u043d\u043e\u0432\u044b\u0439 \u0410\u0434\u0437\u0435",
+  
+  "item.morethanapickaxe.emerald_adze": "\u0418\u0437\u0443\u043c\u0440\u0443\u0434 \u0410\u0434\u0437\u0435",
+  "item.morethanapickaxe.obsidian_adze": "\u041e\u0431\u0441\u0438\u0434\u0438\u0430\u043d \u0410\u0434\u0437\u0435",
+  "item.morethanapickaxe.netherite_adze": "\u041d\u0435\u0437\u0435\u0440\u0438\u0442\u043e\u0432\u044b\u0439 \u0410\u0434\u0437\u0435",
+  
+  "item.morethanapickaxe.vulcanite_adze": "\u0412\u0443\u043b\u043a\u0430\u043d\u0438\u0442 \u0410\u0434\u0437\u0435",
+  "item.morethanapickaxe.carbonado_adze": "\u041a\u0430\u0440\u0431\u043e\u043d\u0430\u0434\u043e \u0410\u0434\u0437\u0435",
+  
+  "item.morethanapickaxe.amethyst_adze": "\u0410\u043c\u0435\u0442\u0438\u0441\u0442 \u0410\u0434\u0437\u0435",
+  "item.morethanapickaxe.ruby_adze": "\u0420\u0443\u0431\u0438\u043d \u0410\u0434\u0437\u0435",
+  "item.morethanapickaxe.sapphire_adze": "\u0421\u0430\u043f\u0444\u0438\u0440 \u0410\u0434\u0437\u0435",
+  "item.morethanapickaxe.topaz_adze": "\u0422\u043e\u043f\u0430\u0437 \u0410\u0434\u0437\u0435",
+  "item.morethanapickaxe.quartz_adze": "\u041a\u0432\u0430\u0440\u0446 \u0410\u0434\u0437\u0435",
   
   "item.hammertime.itemdenseadzewood": "\u0414\u0435\u0440\u0435\u0432\u044f\u043d\u043d\u0430\u044f \u041f\u043b\u043e\u0442\u043d\u0430\u044f \u0041\u0434\u0437\u0435",
   "item.hammertime.itemdenseadzestone": "\u041a\u0430\u043c\u0435\u043d\u043d\u0430\u044f \u041f\u043b\u043e\u0442\u043d\u0430\u044f \u0041\u0434\u0437\u0435",
