--- a/src/main/resources/assets/morethanapickaxe/lang/zh_cn.json
+++ b/src/main/resources/assets/morethanapickaxe/lang/zh_cn.json
@@ -11,7 +11,21 @@
   
   "item.morethanapickaxe.steel_adze": "\u94a2\u963f\u6cfd",
   "item.morethanapickaxe.desh_adze": "\u6234\u65af\u963f\u6cfd",
+  "item.morethanapickaxe.sticky_desh_adze": "\u9ecf\u6ed1\u6234\u65af\u963f\u6cfd",
   "item.morethanapickaxe.titanium_adze_gc": "\u949b\u963f\u6cfd",
+  
+  "item.morethanapickaxe.emerald_adze": "\u7eff\u5b9d\u77f3\u963f\u6cfd",
+  "item.morethanapickaxe.obsidian_adze": "\u9ed1\u66dc\u77f3\u963f\u6cfd",
+  "item.morethanapickaxe.netherite_adze": "\u4e0b\u754c\u5408\u91d1\u963f\u6cfd",
+  
+  "item.morethanapickaxe.vulcanite_adze": "\u0075\u006c\u77f3\u963f\u6cfd",
+  "item.morethanapickaxe.carbonado_adze": "\u5361\u6ce2\u7eb3\u591a\u963f\u6cfd",
+  
+  "item.morethanapickaxe.amethyst_adze": "\u7d2b\u6676\u963f\u6cfd",
+  "item.morethanapickaxe.ruby_adze": "\u7ea2\u5b9d\u77f3\u963f\u6cfd",
+  "item.morethanapickaxe.sapphire_adze": "\u84dd\u5b9d\u77f3\u963f\u6cfd",
+  "item.morethanapickaxe.topaz_adze": "\u9ec4\u7389\u963f\u6cfd",
+  "item.morethanapickaxe.quartz_adze": "\u77f3\u82f1\u963f\u6cfd",
   
   "item.hammertime.itemdenseadzewood": "\u81f4\u5bc6\u6728\u963f\u6cfd",
   "item.hammertime.itemdenseadzestone": "\u81f4\u5bc6\u77f3\u963f\u6cfd",
