--- a/src/main/resources/assets/morethanapickaxe/lang/en_us.json
+++ b/src/main/resources/assets/morethanapickaxe/lang/en_us.json
@@ -11,7 +11,21 @@
   
   "item.morethanapickaxe.steel_adze": "Steel Adze",
   "item.morethanapickaxe.desh_adze": "Desh Adze",
+  "item.morethanapickaxe.sticky_desh_adze": "Sticky Desh Adze",
   "item.morethanapickaxe.titanium_adze_gc": "Titanium Adze",
+  
+  "item.morethanapickaxe.emerald_adze": "Emerald Adze",
+  "item.morethanapickaxe.obsidian_adze": "Obsidian Adze",
+  "item.morethanapickaxe.netherite_adze": "Netherite Adze",
+  
+  "item.morethanapickaxe.vulcanite_adze": "Vulcanite Adze",
+  "item.morethanapickaxe.carbonado_adze": "Carbonado Adze",
+  
+  "item.morethanapickaxe.amethyst_adze": "Amethyst Adze",
+  "item.morethanapickaxe.ruby_adze": "Ruby Adze",
+  "item.morethanapickaxe.sapphire_adze": "Sapphire Adze",
+  "item.morethanapickaxe.topaz_adze": "Topaz Adze",
+  "item.morethanapickaxe.quartz_adze": "Quartz Adze",
   
   "item.hammertime.itemdenseadzewood": "Wooden Dense Adze",
   "item.hammertime.itemdenseadzestone": "Stone Dense Adze",
