--- a/src/main/resources/assets/morethanapickaxe/lang/es_es.json
+++ b/src/main/resources/assets/morethanapickaxe/lang/es_es.json
@@ -27,6 +27,11 @@
   "item.morethanapickaxe.topaz_adze": "Adze de Topacio",
   "item.morethanapickaxe.quartz_adze": "Adze de Cuarzo",
   
+  "item.morethanapickaxe.alexandrite_adze": "Adze de Alejandrita",
+  "item.morethanapickaxe.citrine_adze": "Adze de Citrino",
+  "item.morethanapickaxe.tourmaline_adze": "Adze de Turmalina",
+  "item.morethanapickaxe.corundum_adze": "Adze de Corundo",
+  
   "advancements.morethanapickaxe.install": "M\u00e1s Que un Pico Instalaci\u00f3n",
   "advancements.morethanapickaxe.install.desc": "Descargue e Instale M\u00e1s Que un Pico",
   "advancements.morethanapickaxe.install.display1": "¡coolsim te agradece por descargar M\u00e1s Que un Pico!",
