--- a/src/main/resources/assets/morethanapickaxe/lang/en_us.json
+++ b/src/main/resources/assets/morethanapickaxe/lang/en_us.json
@@ -27,6 +27,11 @@
   "item.morethanapickaxe.topaz_adze": "Topaz Adze",
   "item.morethanapickaxe.quartz_adze": "Quartz Adze",
   
+  "item.morethanapickaxe.alexandrite_adze": "Alexandrite Adze",
+  "item.morethanapickaxe.citrine_adze": "Citrine Adze",
+  "item.morethanapickaxe.tourmaline_adze": "Tourmaline Adze",
+  "item.morethanapickaxe.corundum_adze": "Corundum Adze",
+  
   "advancements.morethanapickaxe.install": "More Than A Pickaxe Installation",
   "advancements.morethanapickaxe.install.desc": "Download and Install More Than A Pickaxe",
   "advancements.morethanapickaxe.install.display1": "coolsim thanks you for downloading More Than A Pickaxe!",
