--- a/src/main/resources/assets/morethanapickaxe/lang/ja_jp.json
+++ b/src/main/resources/assets/morethanapickaxe/lang/ja_jp.json
@@ -27,6 +27,11 @@
   "item.morethanapickaxe.topaz_adze": "\u30c8\u30d1\u30fc\u30ba\u306e\u30a2\u30ba",
   "item.morethanapickaxe.quartz_adze": "\u30af\u30a9\u30fc\u30c4\u306e\u30a2\u30ba",
   
+  "item.morethanapickaxe.alexandrite_adze": "\u30a2\u30ec\u30ad\u30b5\u30f3\u30c9\u30e9\u30a4\u30c8\u306e\u30a2\u30ba",
+  "item.morethanapickaxe.citrine_adze": "\u30b7\u30c8\u30ea\u30f3\u306e\u30a2\u30ba",
+  "item.morethanapickaxe.tourmaline_adze": "\u30c8\u30eb\u30de\u30ea\u30f3\u306e\u30a2\u30ba",
+  "item.morethanapickaxe.corundum_adze": "\u30b3\u30e9\u30f3\u30c0\u30e0\u306e\u30a2\u30ba",
+  
   "advancements.morethanapickaxe.install": "\u3064\u308b\u306f\u3057\u4ee5\u4e0a\u306e\u30a4\u30f3\u30b9\u30c8\u30fc\u30eb",
   "advancements.morethanapickaxe.install.desc": "\u3064\u308b\u306f\u3057\u4ee5\u4e0a\u3092\u30c0\u30a6\u30f3\u30ed\u30fc\u30c9\u3057\u3066\u30a4\u30f3\u30b9\u30c8\u30fc\u30eb\u3059\u308b",
   "advancements.morethanapickaxe.install.display1": "coolsim\u306f\u3064\u308b\u306f\u3057\u4ee5\u4e0a\u3092\u30c0\u30a6\u30f3\u30ed\u30fc\u30c9\u3057\u3066\u304f\u308c\u3066\u3042\u308a\u304c\u3068\u3046\uff01",
