--- a/src/main/resources/assets/morethanapickaxe/lang/zh_tw.json
+++ b/src/main/resources/assets/morethanapickaxe/lang/zh_tw.json
@@ -27,6 +27,11 @@
   "item.morethanapickaxe.topaz_adze": "\u9ec3\u7389\u963f\u6fa4",
   "item.morethanapickaxe.quartz_adze": "\u77f3\u82f1\u963f\u6fa4",
   
+  "item.morethanapickaxe.alexandrite_adze": "\u4e9e\u66c6\u5c71\u5927\u77f3\u963f\u6fa4",
+  "item.morethanapickaxe.citrine_adze": "\u8336\u6676\u963f\u6fa4",
+  "item.morethanapickaxe.tourmaline_adze": "\u96fb\u6c23\u77f3\u963f\u6fa4",
+  "item.morethanapickaxe.corundum_adze": "\u525b\u7389\u963f\u6fa4",
+  
   "advancements.morethanapickaxe.install": "\u4e0d\u53ea\u662f\u93ac\u5b89\u88dd",
   "advancements.morethanapickaxe.install.desc": "\u4e0b\u8f09\u4e26\u5b89\u88dd\u4e0d\u53ea\u662f\u93ac",
   "advancements.morethanapickaxe.install.display1": "coolsim\u8b1d\u8b1d\u60a8\u7684\u4e0b\u8f09\u4e0d\u53ea\u662f\u93ac\uff01",
