Initial Commit for 1.17.1

--- a/src/main/resources/assets/morethanapickaxe/lang/en_us.json
+++ b/src/main/resources/assets/morethanapickaxe/lang/en_us.json
@@ -31,6 +31,7 @@
   "item.morethanapickaxe.citrine_adze": "Citrine Adze",
   "item.morethanapickaxe.tourmaline_adze": "Tourmaline Adze",
   "item.morethanapickaxe.corundum_adze": "Corundum Adze",
+  "item.morethanapickaxe.kunzite_adze": "Kunzite Adze",
   
   "advancements.morethanapickaxe.install": "More Than A Pickaxe Installation",
   "advancements.morethanapickaxe.install.desc": "Download and Install More Than A Pickaxe",
