--- a/src/main/resources/assets/morethanapickaxe/lang/es_es.json
+++ b/src/main/resources/assets/morethanapickaxe/lang/es_es.json
@@ -31,6 +31,7 @@
   "item.morethanapickaxe.citrine_adze": "Adze de Citrino",
   "item.morethanapickaxe.tourmaline_adze": "Adze de Turmalina",
   "item.morethanapickaxe.corundum_adze": "Adze de Corundo",
+  "item.morethanapickaxe.kunzite_adze": "Adze de Kunzita",
   
   "advancements.morethanapickaxe.install": "M\u00e1s Que un Pico Instalaci\u00f3n",
   "advancements.morethanapickaxe.install.desc": "Descargue e Instale M\u00e1s Que un Pico",
