--- a/src/main/resources/assets/morethanapickaxe/lang/zh_cn.json
+++ b/src/main/resources/assets/morethanapickaxe/lang/zh_cn.json
@@ -31,6 +31,7 @@
   "item.morethanapickaxe.citrine_adze": "\u8336\u6676\u963f\u6cfd",
   "item.morethanapickaxe.tourmaline_adze": "\u7535\u6c14\u77f3\u963f\u6cfd",
   "item.morethanapickaxe.corundum_adze": "\u521a\u7389\u963f\u6cfd",
+  "item.morethanapickaxe.kunzite_adze": "\u9502\u7d2b\u7389\u963f\u6cfd",
   
   "advancements.morethanapickaxe.install": "\u4e0d\u53ea\u662f\u9550\u5b89\u88c5",
   "advancements.morethanapickaxe.install.desc": "\u4e0b\u8f7d\u5e76\u5b89\u88c5\u4e0d\u53ea\u662f\u9550",
