--- a/src/main/resources/assets/morethanapickaxe/lang/zh_tw.json
+++ b/src/main/resources/assets/morethanapickaxe/lang/zh_tw.json
@@ -31,6 +31,7 @@
   "item.morethanapickaxe.citrine_adze": "\u8336\u6676\u963f\u6fa4",
   "item.morethanapickaxe.tourmaline_adze": "\u96fb\u6c23\u77f3\u963f\u6fa4",
   "item.morethanapickaxe.corundum_adze": "\u525b\u7389\u963f\u6fa4",
+  "item.morethanapickaxe.kunzite_adze": "\u9502\u7d2b\u7389\u963f\u6fa4",
   
   "advancements.morethanapickaxe.install": "\u4e0d\u53ea\u662f\u93ac\u5b89\u88dd",
   "advancements.morethanapickaxe.install.desc": "\u4e0b\u8f09\u4e26\u5b89\u88dd\u4e0d\u53ea\u662f\u93ac",
