--- a/src/main/resources/assets/morethanapickaxe/lang/ja_jp.json
+++ b/src/main/resources/assets/morethanapickaxe/lang/ja_jp.json
@@ -31,6 +31,7 @@
   "item.morethanapickaxe.citrine_adze": "\u30b7\u30c8\u30ea\u30f3\u306e\u30a2\u30ba",
   "item.morethanapickaxe.tourmaline_adze": "\u30c8\u30eb\u30de\u30ea\u30f3\u306e\u30a2\u30ba",
   "item.morethanapickaxe.corundum_adze": "\u30b3\u30e9\u30f3\u30c0\u30e0\u306e\u30a2\u30ba",
+  "item.morethanapickaxe.kunzite_adze": "\u30af\u30f3\u30c4\u30a1\u30a4\u30c8\u306e\u30a2\u30ba",
   
   "advancements.morethanapickaxe.install": "\u3064\u308b\u306f\u3057\u4ee5\u4e0a\u306e\u30a4\u30f3\u30b9\u30c8\u30fc\u30eb",
   "advancements.morethanapickaxe.install.desc": "\u3064\u308b\u306f\u3057\u4ee5\u4e0a\u3092\u30c0\u30a6\u30f3\u30ed\u30fc\u30c9\u3057\u3066\u30a4\u30f3\u30b9\u30c8\u30fc\u30eb\u3059\u308b",
