--- a/src/main/resources/assets/morethanapickaxe/lang/es_es.json
+++ b/src/main/resources/assets/morethanapickaxe/lang/es_es.json
@@ -33,6 +33,14 @@
   "item.morethanapickaxe.corundum_adze": "Adze de Corundo",
   "item.morethanapickaxe.kunzite_adze": "Adze de Kunzita",
   
+  "item.morethanapickaxe.gravitite_adze": "Adze de Gravitita",
+  "item.morethanapickaxe.zanite_adze": "Adze de Zanite",
+  "item.morethanapickaxe.valkyrie_adze": "Adze de Valquiria",
+  
+  "item.morethanapickaxe.adamantium_adze": "Adze de Adamantio",
+  "item.morethanapickaxe.vibranium_adze": "Adze de Vibranio",
+  "item.morethanapickaxe.nether_brick_adze": "Adze de Ladrillo del Nether",
+  
   "advancements.morethanapickaxe.install": "M\u00e1s Que un Pico Instalaci\u00f3n",
   "advancements.morethanapickaxe.install.desc": "Descargue e Instale M\u00e1s Que un Pico",
   "advancements.morethanapickaxe.install.display1": "¡coolsim te agradece por descargar M\u00e1s Que un Pico!",
