--- a/src/main/resources/assets/morethanapickaxe/lang/ja_jp.json
+++ b/src/main/resources/assets/morethanapickaxe/lang/ja_jp.json
@@ -33,6 +33,14 @@
   "item.morethanapickaxe.corundum_adze": "\u30b3\u30e9\u30f3\u30c0\u30e0\u306e\u30a2\u30ba",
   "item.morethanapickaxe.kunzite_adze": "\u30af\u30f3\u30c4\u30a1\u30a4\u30c8\u306e\u30a2\u30ba",
   
+  "item.morethanapickaxe.gravitite_adze": "\u30b0\u30e9\u30d3\u30bf\u30a4\u30c8\u306e\u30a2\u30ba",
+  "item.morethanapickaxe.zanite_adze": "\u30b6\u30ca\u30a4\u30c8\u306e\u30a2\u30ba",
+  "item.morethanapickaxe.valkyrie_adze": "\u30f4\u30a1\u30eb\u30ad\u30ea\u30fc\u306e\u30a2\u30ba",
+  
+  "item.morethanapickaxe.adamantium_adze": "\u30a2\u30c0\u30de\u30f3\u30c1\u30a6\u30e0\u306e\u30a2\u30ba",
+  "item.morethanapickaxe.vibranium_adze": "\u30d3\u30d6\u30e9\u30cb\u30a6\u30e0\u306e\u30a2\u30ba",
+  "item.morethanapickaxe.nether_brick_adze": "\u30cd\u30b6\u30fc\u30ec\u30f3\u30ac\u306e\u30a2\u30ba",
+  
   "advancements.morethanapickaxe.install": "\u3064\u308b\u306f\u3057\u4ee5\u4e0a\u306e\u30a4\u30f3\u30b9\u30c8\u30fc\u30eb",
   "advancements.morethanapickaxe.install.desc": "\u3064\u308b\u306f\u3057\u4ee5\u4e0a\u3092\u30c0\u30a6\u30f3\u30ed\u30fc\u30c9\u3057\u3066\u30a4\u30f3\u30b9\u30c8\u30fc\u30eb\u3059\u308b",
   "advancements.morethanapickaxe.install.display1": "coolsim\u306f\u3064\u308b\u306f\u3057\u4ee5\u4e0a\u3092\u30c0\u30a6\u30f3\u30ed\u30fc\u30c9\u3057\u3066\u304f\u308c\u3066\u3042\u308a\u304c\u3068\u3046\uff01",
