--- a/src/main/resources/assets/morethanapickaxe/lang/zh_tw.json
+++ b/src/main/resources/assets/morethanapickaxe/lang/zh_tw.json
@@ -33,6 +33,14 @@
   "item.morethanapickaxe.corundum_adze": "\u525b\u7389\u963f\u6fa4",
   "item.morethanapickaxe.kunzite_adze": "\u9502\u7d2b\u7389\u963f\u6fa4",
   
+  "item.morethanapickaxe.gravitite_adze": "\u91cd\u529b\u6676\u963f\u6fa4",
+  "item.morethanapickaxe.zanite_adze": "\u7d2b\u6676\u963f\u6fa4",
+  "item.morethanapickaxe.valkyrie_adze": "\u5973\u6b66\u795e\u963f\u6fa4",
+  
+  "item.morethanapickaxe.adamantium_adze": "\u7cbe\u91d1\u963f\u6fa4",
+  "item.morethanapickaxe.vibranium_adze": "\u632f\u91d1\u963f\u6fa4",
+  "item.morethanapickaxe.nether_brick_adze": "\u5730\u7344\u78da\u584a\u963f\u6fa4",
+  
   "advancements.morethanapickaxe.install": "\u4e0d\u53ea\u662f\u93ac\u5b89\u88dd",
   "advancements.morethanapickaxe.install.desc": "\u4e0b\u8f09\u4e26\u5b89\u88dd\u4e0d\u53ea\u662f\u93ac",
   "advancements.morethanapickaxe.install.display1": "coolsim\u8b1d\u8b1d\u60a8\u7684\u4e0b\u8f09\u4e0d\u53ea\u662f\u93ac\uff01",
