--- a/src/main/resources/assets/morethanapickaxe/lang/en_us.json
+++ b/src/main/resources/assets/morethanapickaxe/lang/en_us.json
@@ -32,6 +32,8 @@
   "item.morethanapickaxe.tourmaline_adze": "Tourmaline Adze",
   "item.morethanapickaxe.corundum_adze": "Corundum Adze",
   "item.morethanapickaxe.kunzite_adze": "Kunzite Adze",
+  "item.morethanapickaxe.moissanite_adze": "Moissanite Adze",
+  "item.morethanapickaxe.spinel_adze": "Spinel Adze",
   
   "item.morethanapickaxe.gravitite_adze": "Gravitite Adze",
   "item.morethanapickaxe.zanite_adze": "Zanite Adze",
