--- a/src/main/resources/assets/morethanapickaxe/lang/es_es.json
+++ b/src/main/resources/assets/morethanapickaxe/lang/es_es.json
@@ -32,6 +32,8 @@
   "item.morethanapickaxe.tourmaline_adze": "Adze de Turmalina",
   "item.morethanapickaxe.corundum_adze": "Adze de Corundo",
   "item.morethanapickaxe.kunzite_adze": "Adze de Kunzita",
+  "item.morethanapickaxe.moissanite_adze": "Adze de Moissanita",
+  "item.morethanapickaxe.spinel_adze": "Adze de Espinela",
   
   "item.morethanapickaxe.gravitite_adze": "Adze de Gravitita",
   "item.morethanapickaxe.zanite_adze": "Adze de Zanite",
