--- a/src/main/resources/assets/morethanapickaxe/lang/ja_jp.json
+++ b/src/main/resources/assets/morethanapickaxe/lang/ja_jp.json
@@ -32,6 +32,8 @@
   "item.morethanapickaxe.tourmaline_adze": "\u30c8\u30eb\u30de\u30ea\u30f3\u306e\u30a2\u30ba",
   "item.morethanapickaxe.corundum_adze": "\u30b3\u30e9\u30f3\u30c0\u30e0\u306e\u30a2\u30ba",
   "item.morethanapickaxe.kunzite_adze": "\u30af\u30f3\u30c4\u30a1\u30a4\u30c8\u306e\u30a2\u30ba",
+  "item.morethanapickaxe.moissanite_adze": "\u30e2\u30a2\u30c3\u30b5\u30ca\u30a4\u30c8\u306e\u30a2\u30ba",
+  "item.morethanapickaxe.spinel_adze": "\u30b9\u30d4\u30cd\u30eb\u306e\u30a2\u30ba",
   
   "item.morethanapickaxe.gravitite_adze": "\u30b0\u30e9\u30d3\u30bf\u30a4\u30c8\u306e\u30a2\u30ba",
   "item.morethanapickaxe.zanite_adze": "\u30b6\u30ca\u30a4\u30c8\u306e\u30a2\u30ba",
