--- a/src/main/resources/assets/morethanapickaxe/lang/ru_ru.json
+++ b/src/main/resources/assets/morethanapickaxe/lang/ru_ru.json
@@ -32,6 +32,8 @@
   "item.morethanapickaxe.tourmaline_adze": "\u0422\u0443\u0440\u043c\u0430\u043b\u0438\u043d \u0410\u0434\u0437\u0435",
   "item.morethanapickaxe.corundum_adze": "\u041a\u043e\u0440\u0443\u043d\u0434 \u0410\u0434\u0437\u0435",
   "item.morethanapickaxe.kunzite_adze": "\u041a\u0443\u043d\u0441\u0430\u0439\u0442 \u0410\u0434\u0437\u0435",
+  "item.morethanapickaxe.moissanite_adze": "\u041c\u0443\u0430\u0441\u0441\u0430\u043d\u0438\u0442 \u0410\u0434\u0437\u0435",
+  "item.morethanapickaxe.spinel_adze": "\u0428\u043f\u0438\u043d\u0435\u043b\u044c \u0410\u0434\u0437\u0435",
   
   "item.morethanapickaxe.gravitite_adze": "\u0413\u0440\u0430\u0432\u0438\u0442\u0438\u0442\u043e\u0432\u044b\u0439 \u0410\u0434\u0437\u0435",
   "item.morethanapickaxe.zanite_adze": "\u0417\u0430\u043d\u0438\u0442 \u0410\u0434\u0437\u0435",
