--- a/src/main/resources/assets/morethanapickaxe/lang/zh_cn.json
+++ b/src/main/resources/assets/morethanapickaxe/lang/zh_cn.json
@@ -32,6 +32,8 @@
   "item.morethanapickaxe.tourmaline_adze": "\u7535\u6c14\u77f3\u963f\u6cfd",
   "item.morethanapickaxe.corundum_adze": "\u521a\u7389\u963f\u6cfd",
   "item.morethanapickaxe.kunzite_adze": "\u9502\u7d2b\u7389\u963f\u6cfd",
+  "item.morethanapickaxe.moissanite_adze": "\u83ab\u6851\u77f3\u963f\u6cfd",
+  "item.morethanapickaxe.spinel_adze": "\u5c16\u6676\u77f3\u963f\u6cfd",
   
   "item.morethanapickaxe.gravitite_adze": "\u91cd\u529b\u6676\u963f\u6cfd",
   "item.morethanapickaxe.zanite_adze": "\u7d2b\u6676\u963f\u6cfd",
